public/docs/zh-CN/r2.3/_sources/api_python/ops/mindspore.ops.RNNTLoss.rst.txt
mindspore.ops.RNNTLoss
=======================

.. image:: https://mindspore-website.obs.cn-north-4.myhuaweicloud.com/website-images/r2.3/resource/_static/logo_source.svg
    :target: https://gitee.com/mindspore/mindspore/blob/r2.3/docs/api/api_python/ops/mindspore.ops.RNNTLoss.rst
    :alt: 查看源文件


.. py:class:: mindspore.ops.RNNTLoss(blank_label=0)

    计算相对于softmax输出的RNNTLoss及其梯度。

    参数：
        - **blank_label** (int) - 空白标签。默认值： ``0`` 。

    输入：
        - **acts** (Tensor) - Tensor，shape为 :math:`(B, T, U, V)` 。其中 :math:`B` 为batch维， :math:`T` 为输入序列长度， :math:`U` 为目标序列长度， :math:`V` 为输出维。数据类型必须为float16或float32。
        - **labels** (Tensor) - Tensor，shape为 :math:`(B, U-1)` 。数据类型为int32。
        - **input_lengths** (Tensor) - Tensor，shape为 :math:`(B,)` 。数据类型为int32。
        - **label_lengths** (Tensor) - Tensor，shape为 :math:`(B,)` 。数据类型为int32。

    输出：
        - **costs** (Tensor) - Tensor，shape为 :math:`(B,)` 。数据类型为int32。
        - **grads** (Tensor) - 具有与 `acts` 相同的shape和dtype。

    异常：
        - **TypeError** - 如果 `acts` 、 `labels` 、 `input_lengths` 或 `label_lengths` 不是Tensor。
        - **TypeError** - 如果 `acts` 的dtype既不是float16也不是float32。
        - **TypeError** - 如果 `labels`、 `input_lengths` 或 `label_lengths` 的dtype不是int32。
